Add class PoolingStation

--- a/JuniorMind7/CentralizedElections/CentralizedElections.csproj
+++ b/JuniorMind7/CentralizedElections/CentralizedElections.csproj
@@ -48,7 +48,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Candidate.cs" />
     <Compile Include="CentralizedElectionsTests.cs" />
+    <Compile Include="PoolingStation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
