--- a/JuniorMind9/LinkedList/LinkedList.csproj
+++ b/JuniorMind9/LinkedList/LinkedList.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="LinkedList.cs" />
     <Compile Include="LinkedListTests.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
